Math.clamp / parallelStream